# zkp-pong

./: .env  .env.example  AGENTS.md  AUDIT-FIXES.md  AUDIT.md  DESYNC_FIX.md  MATCHMAKING.md  P2P_IMPLEMENTATION_SUMMARY.md  P2P_SETUP.md  README.md  SERVER_AUTHORITATIVE_ARCHITECTURE.md  SUMMARY.md  TESTING.md  fe-audit.md  package-lock.json  package.json  pnpm-lock.yaml  pong-log_events19_1761147203682.json  pong-log_events39_1761096045223.json  pong-log_events61_1761095976507.json  pong-log_events64_1761147732142.json  pong-log_events64_1761348534059.json  pong-log_events67_1761140976543.json  pong-log_events68_1761096140129.json  pong-log_events71_1761147635847.json  pong-log_events75_1761139604550.json  pong-log_events85_1761349770536.json  pong-log_events86_1761139690493.json  pong-log_seed237054789_events40_1757556139973.json  pong-log_seed725309225_events59_1761069335045.json  pong-log_seed930397884_events49_1757552715309.json  tsconfig.json
.claude/: instructions.md
cloudflare-server/: README.md  package.json  pnpm-lock.yaml  tsconfig.json  wrangler.toml
cloudflare-server/src/: index.ts
prover/: .gitignore  AGENTS.md  Cargo.toml  README.md  pong-proof_game2691227667_1761347799.json  pong-proof_game3477302517_1761348932.json
prover/.claude/: instructions.md
prover/api-server/: Cargo.toml
prover/api-server/src/: main.rs
prover/core/: Cargo.toml
prover/core/src/: lib.rs
prover/host/: Cargo.toml
prover/host/src/: lib.rs  main.rs
prover/host/tests/: integration_test.rs  log_validation_test.rs
prover/methods/guest/: Cargo.toml
prover/methods/guest/src/: constants.rs  fixed.rs  main.rs  physics.rs  types.rs
src/: main.ts
src/pong/: commitment.ts  constants.ts  engine-p2p.ts  engine.ts  fixed.ts  p2p.ts
test/: README.md  commitment.test.ts  engine.test.ts  log-validation.test.ts
