[package]
name = "api-server"
version = "0.1.0"
edition = "2021"

[dependencies]
# Core types
pong_core = { path = "../core", package = "core" }

# Host library with pong proof generation and verification
host = { path = "../host" }

# Web server framework
actix-web = "4.9"
actix-rt = "2.10"
actix-cors = "0.7"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[features]
cuda = ["host/cuda"]
