[package]
name = "host"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "pong-prover"
path = "src/main.rs"

[dependencies]
core = { path = "../core" }
methods = { path = "../methods" }
risc0-zkvm = { version = "3.0.3", default-features = false, features = ["prove"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[features]
default = []
cuda = ["risc0-zkvm/cuda"]
metal = ["risc0-zkvm/metal"]
