[package]
name = "host"
version = "0.1.0"
edition = "2021"

[lib]
name = "host"
path = "src/lib.rs"

[[bin]]
name = "pong-prover"
path = "src/main.rs"

[dependencies]
core = { path = "../core" }
methods = { path = "../methods" }
risc0-zkvm = { version = "3.0.3", default-features = false, features = ["prove"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"
bincode = "1.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = "0.4"

[features]
default = []
cuda = ["risc0-zkvm/cuda"]
