[package]
name = "guest_code_for_zk_proof"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
core = { path = "../../core", default-features = false }
risc0-zkvm = { version = "3.0.3", default-features = false, features = ["std"] }
serde = { version = "1.0", features = ["derive"], default-features = false }
sha2 = { version = "0.10", default-features = false }

[patch.crates-io]
sha2 = { git = "https://github.com/risc0/RustCrypto-hashes", tag = "sha2-v0.10.6-risczero.0" }
